// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Process Tabs Information No Resources renders 1`] = `
<style>
.c0 {
  margin: 12px 0px 0px 0px !important;
}

.c0 .column {
  padding-top: 5px !important;
}

.c0 .label {
  margin-left: 0px !important;
}

.c1.c1.c1.c1.c1 {
  padding: 12px;
  height: 100%;
}

.c1.c1.c1.c1.c1 .header .content {
  width: 100%;
}</style>

<div
  className="pageFrom"
>
  <div
    className="ui stackable grid ui form c0"
  >
    <div
      className="sixteen wide column"
    >
      <div
        className="c1"
      >
        <h2
          className="ui header"
        >
          <i
            aria-hidden="true"
            className="briefcase icon"
          />
          <div
            className="content"
          >
            Process
            <a
              className="ui mini icon right floated left labeled button"
              href="/process/process/preview/diagram/1"
              onClick={[Function]}
              role="button"
            >
              <i
                aria-hidden="true"
                className="sitemap icon"
              />
              Show Diagram
            </a>
            <div
              className="sub header"
            >
              Manage your process · 
              Travel
            </div>
          </div>
        </h2>
        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </p>
        <button
          className="ui primary button"
          onClick={[Function]}
          role="button"
        >
          <i
            aria-hidden="true"
            className="rocket icon"
          />
          Launch Process
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Process Tabs Information With Resources renders 1`] = `
<style>
.c0 {
  margin: 12px 0px 0px 0px !important;
}

.c0 .column {
  padding-top: 5px !important;
}

.c0 .label {
  margin-left: 0px !important;
}

.c1.c1.c1.c1.c1 {
  padding: 12px;
  height: 100%;
}

.c1.c1.c1.c1.c1 .header .content {
  width: 100%;
}</style>

<div
  className="pageFrom"
>
  <div
    className="ui stackable grid ui form c0"
  >
    <div
      className="eleven wide column"
    >
      <div
        className="c1"
      >
        <h2
          className="ui header"
        >
          <i
            aria-hidden="true"
            className="briefcase icon"
          />
          <div
            className="content"
          >
            Process
            <a
              className="ui mini icon right floated left labeled button"
              href="/process/process/preview/diagram/1"
              onClick={[Function]}
              role="button"
            >
              <i
                aria-hidden="true"
                className="sitemap icon"
              />
              Show Diagram
            </a>
            <div
              className="sub header"
            >
              Manage your process · 
              Travel
            </div>
          </div>
        </h2>
        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </p>
        <button
          className="ui primary button"
          onClick={[Function]}
          role="button"
        >
          <i
            aria-hidden="true"
            className="rocket icon"
          />
          Launch Process
        </button>
      </div>
    </div>
    <div
      className="five wide column"
    >
      <h5
        className="ui tiny dividing inverted top attached header"
      >
        <i
          aria-hidden="true"
          className="folder icon"
        />
        <div
          className="content"
        >
          Resources
        </div>
      </h5>
      <div
        className="ui attached segment"
      >
        <div
          className="ui list"
          role="list"
        >
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
          >
            <i
              aria-hidden="true"
              className="folder icon"
            />
            <div
              className="content"
            >
              Forms
              <div
                className="list"
              >
                <a
                  className="item"
                  href="/process/process/preview/form/approval-form/1/1"
                  onClick={[Function]}
                  role="listitem"
                >
                  <i
                    aria-hidden="true"
                    className="wordpress forms icon"
                  />
                  <div
                    className="content"
                  >
                    Approval Form
                  </div>
                </a>
                <a
                  className="item"
                  href="/process/process/preview/form/approval-report/1/1"
                  onClick={[Function]}
                  role="listitem"
                >
                  <i
                    aria-hidden="true"
                    className="wordpress forms icon"
                  />
                  <div
                    className="content"
                  >
                    Approval Report
                  </div>
                </a>
              </div>
            </div>
          </div>
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
          >
            <i
              aria-hidden="true"
              className="folder icon"
            />
            <div
              className="content"
            >
              Documents
              <div
                className="list"
              >
                <a
                  className="item"
                  href="/process/process/preview/document/guidelines/1/1"
                  onClick={[Function]}
                  role="listitem"
                >
                  <i
                    aria-hidden="true"
                    className="file icon"
                  />
                  <div
                    className="content"
                  >
                    Guidelines
                  </div>
                </a>
              </div>
            </div>
          </div>
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
          >
            <i
              aria-hidden="true"
              className="folder icon"
            />
            <div
              className="content"
            >
              Files
              <div
                className="list"
              >
                <a
                  className="item"
                  href="/files/1//uploads/file.doc"
                  onClick={[Function]}
                  role="listitem"
                  target="_blank"
                >
                  <i
                    aria-hidden="true"
                    className="file alternate icon"
                  />
                  <div
                    className="content"
                  >
                    Excel File
                  </div>
                </a>
              </div>
            </div>
          </div>
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
          >
            <i
              aria-hidden="true"
              className="folder icon"
            />
            <div
              className="content"
            >
              Links
              <div
                className="list"
              >
                <a
                  className="item"
                  href="http://google.com"
                  onClick={[Function]}
                  role="listitem"
                  target="_blank"
                >
                  <i
                    aria-hidden="true"
                    className="linkify icon"
                  />
                  <div
                    className="content"
                  >
                    External Resource
                  </div>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
